First Commit after Yeoman Working

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "meanjs",
-  "description": "Fullstack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "expertrtc",
+  "description": "Full-Stack WebRTC Videoconferencing Solution.  JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "homepage": "http://meanjs.org/",
   "license": "MIT",
   "dependencies": {
