--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "expertrtc",
+  "description": "Full-Stack WebRTC Videoconferencing Solution.  JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "version": "0.4.2",
   "meanjs-version": "0.4.2",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "Taylor Hayduk",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "lodash": "^3.10.0",
     "method-override": "^2.3.3",
     "mocha": "~1.20.0",
+    "mongodb": "^2.2.5",
     "mongoose": "~4.2.3",
     "morgan": "^1.6.1",
     "multer": "~1.0.5",
@@ -66,13 +67,14 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.4",
+    "grunt-compass": "^0.3.9",
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "~0.12.3",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "~0.4.4",
